--- a/processing/requirements.txt
+++ b/processing/requirements.txt
@@ -1,6 +1,6 @@
 connexion==2.7.0
 swagger-ui-bundle==0.0.8
-APScheduler==3.6.3
+APScheduler
 SQLAlchemy==1.3.22
 pykafka==2.4.0
 mysql-connector-python
