--- a/processing/requirements.txt
+++ b/processing/requirements.txt
@@ -1,7 +1,8 @@
 connexion==2.7.0
 swagger-ui-bundle==0.0.8
-APScheduler==3.6.3
+APScheduler
 SQLAlchemy==1.3.22
 pykafka==2.4.0
 mysql-connector-python
 pymysql==1.0.2
+flask-cors==3.0.10
