--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3.3'
 
 services:
+      dashboard:
+        image: dashboard
+        ports: 
+          - "3000:3000"
+        depends_on:
+          - "processing"
+          - "audit_log"
 
       receiver: 
         image: receiver
