--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -8,23 +8,36 @@ services:
         depends_on:
           - "processing"
           - "audit_log"
-
+       
       receiver: 
+        environment:
+          - TARGET_ENV=test
         image: receiver
         ports: 
         - "8080:8080"
         depends_on:
         - "kafka"
+        volumes:
+          - /home/azureuser/config/receiver:/config
 
       storage:
+        environment:
+          - TARGET_ENV=test
         image: storage
         ports:
         - "8090:8090"
         depends_on:
         - "kafka"
         - "db"
+        volumes:
+          - /home/azureuser/config/storage:/config
+
 
       processing:
+        environment:
+          - TARGET_ENV=test
+        volumes:
+          - /home/azureuser/config/processing:/config
         image: processing
         ports:
         - "8100:8100"
@@ -34,6 +47,10 @@ services:
 
 
       audit_log:
+        environment:
+          - TARGET_ENV=test
+        volumes:
+          - /home/azureuser/config/audit_log:/config
         image: audit_log
         ports:
         - "9080:9080"
@@ -53,7 +70,9 @@ services:
           ports:
               - "9092:9092"
           hostname: kafka
+          
           environment:
+              
               KAFKA_CREATE_TOPICS: "events:1:1" # topic:partition:replicas
               KAFKA_ADVERTISED_HOST_NAME: kafka.canadacentral.cloudapp.azure.com # docker-machine ip
               KAFKA_LISTENERS: INSIDE://:29092,OUTSIDE://:9092
@@ -66,8 +85,11 @@ services:
           volumes:
               - /var/run/docker.sock:/var/run/docker.sock
               - /home/azureuser/kafka:/kafka/kafka-logs
+
+              
           depends_on:
               - "zookeeper"
+             
       db:
               image: mysql:5.7
               restart: always
