--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         - "kafka"
         volumes:
           - /home/azureuser/config/receiver:/config
-          - /homoe/azureuser/logs:/logs
+          - /home/azureuser/logs:/logs
 
       storage:
         environment:
@@ -32,7 +32,7 @@ services:
         - "db"
         volumes:
           - /home/azureuser/config/storage:/config
-          - /homoe/azureuser/logs:/logs
+          - /home/azureuser/logs:/logs
 
 
       processing:
@@ -40,7 +40,7 @@ services:
           - TARGET_ENV=test
         volumes:
           - /home/azureuser/config/processing:/config
-          - /homoe/azureuser/logs:/logs
+          - /home/azureuser/logs:/logs
 
         image: processing
         ports:
@@ -55,7 +55,7 @@ services:
           - TARGET_ENV=test
         volumes:
           - /home/azureuser/config/audit_log:/config
-          - /homoe/azureuser/logs:/logs
+          - /home/azureuser/logs:/logs
 
         image: audit_log
         ports:
