--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -41,6 +41,7 @@ services:
         volumes:
           - /home/azureuser/config/processing:/config
           - /home/azureuser/logs:/logs
+          - processing-db:/data
 
         image: processing
         ports:
@@ -119,3 +120,5 @@ services:
   # Names our volume
 volumes:
         my-db:
+        processing-db:
+          
