--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -64,6 +64,18 @@ services:
         depends_on:
         - "kafka"
 
+        health_check:
+          environment:
+            - TARGET_ENV=test
+          volumes:
+            - /home/azure/config/health_check:/config
+            - /home/azureuser/logs:/logs
+          
+          image: health_check
+          ports:
+          - "8120:8120"
+       
+
       zookeeper:
           image: wurstmeister/zookeeper
           ports:
