--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -4,7 +4,9 @@ services:
       dashboard:
         image: dashboard
         ports: 
-          - "3000:3000"
+          - "3000"
+        networks:
+          - "api.network"
         depends_on:
           - "processing"
           - "audit_log"
@@ -14,7 +16,9 @@ services:
           - TARGET_ENV=test
         image: receiver
         ports: 
-        - "8080:8080"
+          - "8080"
+        networks:
+          - "api.network"
         depends_on:
         - "kafka"
         volumes:
@@ -26,7 +30,9 @@ services:
           - TARGET_ENV=test
         image: storage
         ports:
-        - "8090:8090"
+          - "8090"
+        networks:
+          - "api.network"
         depends_on:
         - "kafka"
         - "db"
@@ -45,10 +51,12 @@ services:
 
         image: processing
         ports:
-        - "8100:8100"
+          - "8100"
+        networks:
+          - "api.network"
         depends_on:
         - storage
-        network_mode: "host"
+        # network_mode: "host"
 
 
       audit_log:
@@ -60,7 +68,9 @@ services:
 
         image: audit_log
         ports:
-        - "9080:9080"
+          - "9080"
+        networks:
+          - "api.network"
         depends_on:
         - "kafka"
 
@@ -105,10 +115,27 @@ services:
               - /var/run/docker.sock:/var/run/docker.sock
               - /home/azureuser/kafka:/kafka/kafka-logs
 
-              
           depends_on:
               - "zookeeper"
-             
+      nginx:
+        image: nginx:latest
+        # connects the conf file of the container to the conf file in our folder 
+        volumes: 
+          - /home/azureuser/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+        # It will start up the nginx only when all api containers have started 
+        depends_on:
+          - "receiver"
+          - "storage"
+          - "processing"
+          - "audit_log"
+          - "dashboard-ui"
+        # Connects the port 80 of the nginx container to localhost:80 or locahost 
+        ports:
+          - "80:80"
+        networks:
+          - "api.network"
+        
+
       db:
               image: mysql:5.7
               restart: always
@@ -133,4 +160,6 @@ services:
 volumes:
         my-db:
         processing-db:
-          
+
+networks:
+  api.network: 
